Clean up JVM args, add cloverage